Created the exported route of roles and questions and some others corrections
